2001-01-10  Glenn Maynard <g_ld@zewt.org>

	* FileCopy.cc, FileCopy.h: (fail_if_broken) new member.

2001-01-09  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc, FileCopy.h: (FileCopyPeer::done) new member; use it;
	  (FileCopyPeerFDStream::Done) method removed.

2001-01-08  Alexander V. Lukyanov <lav@yars.free.net>

	* Job.cc, Job.h: (CheckForWaitLoop) new method.
	* commands.cc: (wait) use it.

2001-01-04  Alexander V. Lukyanov <lav@yars.free.net>

	* LocalDir.cc, LocalDir.h: new files.
	* CmdExec.cc, CmdExec.h: use new LocalDirectory class; specify local
	  directory at CmdExec creation time.
	* LocalAccess.cc: use LocalDirectory.
	* SleepJob.cc, SleepJob.h: specify LocalDirectory at creation time;
	  use it to create CmdExec.
	* commands.cc: handle new CmdExec and SleepJob creation; allow lpwd
	  redirection.
	* lftp.cc: new CmdExec ctor.

2001-01-03  jfaith <jfaith@cemsys.com>

	* resource.cc: (OrderValidate) fix off by one xmalloc bug.

2002-01-03  Alexander V. Lukyanov <lav@yars.free.net>

	* Filter.cc: don't stop process if there is a process group already;
	  don't call second->Done if !delete_second.
	* lftpget: quote single quote properly.
	* Fish.cc: use fish:connect-program setting.
	* resource.cc: new fish setting; don't send referer by default.

2002-01-01  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: fix SendCWD to set correct check case.

2001-12-26  Alexander V. Lukyanov <lav@yars.free.net>

	* ArgV.h: new ctor.
	* CatJob.cc, CatJob.h: use ArgV to launch filters; always launch
	  global command if there is for_each filter.
	* Filter.cc, Filter.h: DeleteSecondaryStream new method; improve
	  OutputFilter::{usesfd,Done,Kill}.

2001-12-26  Glenn Maynard <g_ld@zewt.org>

	* ftpclass.cc: correct message.

2001-12-25  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc: assume keep-alive for http/1.1 by default (reported by
	  Marc Lehmann).

2001-12-24  Alexander V. Lukyanov <lav@yars.free.net>
